--- a/project/build.properties
+++ b/project/build.properties
@@ -1,9 +1,7 @@
-#Project properties
-#Fri Apr 23 11:24:20 PDT 2010
-project.organization=UserSource
+project.organization=net.usersource
 project.name=vBaD
-sbt.version=0.7.4
-project.version=0.1
-def.scala.version=2.8.0
-build.scala.versions=2.8.0
+sbt.version=0.7.5.RC0
+project.version=0.2
+def.scala.version=2.8.1
+build.scala.versions=2.8.1
 project.initialize=false
